# PySimplePreview

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/example/: condition_import.py  custom_window.py  derrived.py  independent.py  simple.py
examples/example2/: condition_import.py  simple.py
src/PySimplePreview/: __init__.py  __main__.py  di.py  example.py  main.py
src/PySimplePreview/data/: config_storage.py  di.py  previews_storage.py
src/PySimplePreview/domain/: di.py
src/PySimplePreview/domain/interactor/: files_observer.py  module_loader.py  previews_manager.py
src/PySimplePreview/domain/interactor/abc/: files_observer.py  module_loader.py
src/PySimplePreview/domain/model/: config.py  event.py  log_config.py  position.py  preview.py
src/PySimplePreview/view/: app.py  contracts.py  controllers.py  di.py  layouts.py  log.py  models.py
src/PySimplePreview/view/api/: _types.py  _utils.py  core.py  core.pyi  groups.py  groups.pyi  preview.py  preview.pyi
src/PySimplePreview/view/controller/: base.py  external_preview.py  external_preview_factory.py  preview_settings.py  system_args_handler.py  utils.py
