[metadata]
name = PySimplePreview
version = attr: PySimplePreview.__version__
author = MaxBQb
description = "Realtime (live/hot) preview of PySimpleGUI layouts"
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.11
dynamic = ["dependencies"]
package_dir=
    =src
[options.packages.find]
where=src
[options.entry_points]
console_scripts =
    PySimplePreview = PySimplePreview:main
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
