[metadata]
name = PySimplePreview
version = attr: PySimplePreview.__version__
author = MaxBQb
description = Realtime (live/hot) preview of PySimpleGUI layouts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PySimpleGUI, preview, live-preview, realtime-preview, GUI
license = MIT License
license_files =
    LICENSE.md
project_urls =
    Homepage = https://github.com/MaxBQb/PySimplePreview
    Bug Tracker = https://github.com/MaxBQb/PySimplePreview/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options.package_data]
* = *.md

[options]
packages = find:
python_requires = >=3.11
install_requires = file: requirements.txt
package_dir=
    =src
[options.packages.find]
where=src
[options.entry_points]
console_scripts =
    PySimplePreview = PySimplePreview:main
